--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,7 @@ button:hover{
     height:20px;
 }
 .tips{
-    margin: 2px;
-    padding: 10px;
+    margin: 0%;
+    padding: 0%;
+    font-size: large;
 }
